--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 	<div id="header">
 		<h1>Sławne koty w internecie</h1>
 	</div>
+ 
+	
 
 
 <div id="nav">
 <a href="./index.html">Główna</a><br>
-<a href="./s1.html">strona1</a><br>
+<a href="./s1.html">Grumpy Cat</a><br>
 <a href="./s2.html">strona2</a><br>
 <a href="./s3.html">strona3</a><br>
 <a href="./s4.html">strona4</a><br>
@@ -23,7 +25,7 @@
 </div>
 
 <div id="section">
-<img src=koty.gif align="middle"/>
+<img src=zdj/koty.gif align="middle"/>
 <br>
 <p>Jak powszechnie wiadomo, internet składa się w dużej mierze z kotów. Około 15% informacji wyszukiwanych w internecie jest powiązana z kotami.</p>
 <p>Na poszczególnych podstronach przedstawione są popularne koty z internetu.</p>
@@ -53,10 +55,10 @@ Koci opór jest wprost proporcjonalny do ludzkiej chęci zmuszenia kota do czego
 </div>
 <br>
 <h3> Kot według Leonarda da Vinci </h3>
-<img src=Kotd.gif />
+<img src=zdj/Kotd.gif />
 <div id="zrodlo">
 Źródło: <a href=http://nonsensopedia.wikia.com/wiki/Kot>http://nonsensopedia.wikia.com/wiki/Kot</a>
-<img src=dol.gif align="left"/>
+<img src=zdj/dol.gif align="left"/>
 </div>
 
 
@@ -65,6 +67,8 @@ Koci opór jest wprost proporcjonalny do ludzkiej chęci zmuszenia kota do czego
 		&copy; Copyright 2015 Julia Kuczyńska</footer>
  
 	</div>
+<style> html, body, a, a:hover { cursor:url('http://www.snazzyspace.com/cursorsfolder/claw-print.png'), auto !important; }</style>
+<div><a style="position:fixed;z-index:9 !important;top:300px;left:3px;" href="http://www.snazzyspace.com/" title="Tumblr Mouse Cursors" target="_blank"></a></div>
 
 </body>
 </html>
