--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="nav">
 <a href="./index.html">Główna</a><br>
 <a href="./s1.html">Grumpy Cat</a><br>
-<a href="./s2.html">strona2</a><br>
+<a href="./s2.html">Pusheen</a><br>
 <a href="./s3.html">strona3</a><br>
 <a href="./s4.html">strona4</a><br>
 <a href="./s5.html">strona5</a><br>
