--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <a href="./index.html">Główna</a><br>
 <a href="./s1.html">Grumpy Cat</a><br>
 <a href="./s2.html">Pusheen</a><br>
-<a href="./s3.html">strona3</a><br>
-<a href="./s4.html">strona4</a><br>
+<a href="./s3.html">Nyan Cat</a><br>
+<a href="./s4.html">Lil Bub</a><br>
 <a href="./s5.html">strona5</a><br>
 <a href="./s6.html">strona6</a><br>
 </div>
@@ -59,9 +59,8 @@ Koci opór jest wprost proporcjonalny do ludzkiej chęci zmuszenia kota do czego
 <div id="zrodlo">
 Źródło: <a href=http://nonsensopedia.wikia.com/wiki/Kot>http://nonsensopedia.wikia.com/wiki/Kot</a>
 <img src=zdj/dol.gif align="left"/>
+
 </div>
-
-
 
 	<div id="footer">
 		&copy; Copyright 2015 Julia Kuczyńska</footer>
