--- a/s1.html
+++ b/s1.html
@@ -18,8 +18,8 @@
 <a href="./index.html">Główna</a><br>
 <a href="./s1.html">Grumpy Cat</a><br>
 <a href="./s2.html">Pusheen</a><br>
-<a href="./s3.html">strona3</a><br>
-<a href="./s4.html">strona4</a><br>
+<a href="./s3.html">Nyan Cat</a><br>
+<a href="./s4.html">Lil Bub</a><br>
 <a href="./s5.html">strona5</a><br>
 <a href="./s6.html">strona6</a><br>
 </div>
@@ -38,9 +38,8 @@
 <br>
 
 <img src=zdj/meme.jpeg align="middle"/>
-
-</div>
-
+<br>
+<br>
 
 
 
