--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <a href="./s2.html">Pusheen</a><br>
 <a href="./s3.html">Nyan Cat</a><br>
 <a href="./s4.html">Lil Bub</a><br>
-<a href="./s5.html">strona5</a><br>
-<a href="./s6.html">strona6</a><br>
+<a href="./s5.html">Hamilton</a><br>
+<a href="./s6.html">Statystyki</a><br>
 </div>
 
 <div id="section">
