--- a/s4.html
+++ b/s4.html
@@ -3,12 +3,12 @@
 <head>
 	<link href='https://fonts.googleapis.com/css?family=Oldenburg' rel='stylesheet' type='text/css'>
 	<meta charset="UTF-8">
-	<title>Pusheen</title>
+	<title>Lil Bub</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 	<div id="header">
-		<h1>Pusheen</h1>
+		<h1>Lil Bub</h1>
 	</div>
  
 	
@@ -20,8 +20,8 @@
 <a href="./s2.html">Pusheen</a><br>
 <a href="./s3.html">Nyan Cat</a><br>
 <a href="./s4.html">Lil Bub</a><br>
-<a href="./s5.html">strona5</a><br>
-<a href="./s6.html">strona6</a><br>
+<a href="./s5.html">Hamilton</a><br>
+<a href="./s6.html">Statystyki</a><br>
 </div>
 
 <div id="section">
@@ -32,7 +32,6 @@
 <p>Dzisiaj Lil Bub ma swoją stronę internetową, konto na Twitterze oraz na Instagram. Podobnie jak poprzednie koty, Lil też ma własny sklep, gdzie można kupić ubrania z jej podobizną. Część zysków jest przeznaczana na cele charytatywne. Roczny zysk z działalności kotki wynosi około 60 tysięcy dolarów.</p>
 
 
-<p> ..... </p>
 
 
 <br>
