--- a/s2.html
+++ b/s2.html
@@ -41,8 +41,10 @@
 
 <br>
 <br>
+Link do sklepu z gadżetami z Pusheen: <a href=http://www.heychickadee.com/collections/pusheenthecat>Sklep</a>
 
-
+<br>
+<br>
 
 
 
