--- a/s6.html
+++ b/s6.html
@@ -41,7 +41,7 @@
   <tbody>
     <tr>
       <th scope="row">Grumpy Cat</th>
-      <td>224 173</td>
+      <td>224 tys</td>
       <td>8,3 mln</td>
       <td>1.1 mln</td>
     </tr>
@@ -49,7 +49,7 @@
       <th scope="row">Pusheen</th>
       <td>----</td>
       <td>9 mln</td>
-      <td>122k</td>
+      <td>122 tys</td>
     </tr>
      <tr>
       <th scope="row">Nyan Cat</th>
@@ -59,15 +59,15 @@
     </tr>
        <tr>
       <th scope="row">Lil Bub</th>
-      <td>177 873</td>
+      <td>177 tys</td>
       <td>2,4 mln</td>
       <td>1,1 mln</td>
     </tr>
      <tr>
       <th scope="row">Hamilton</th>
-      <td>7 259</td>
-      <td>115 082</td>
-      <td>359 192</td>
+      <td>7 tys</td>
+      <td>115 tys</td>
+      <td>359 tys</td>
     </tr>
   </tbody>
   
