--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="section">
-<img src=zdj/koty.gif align="middle"/>
+<img src=galeria/koty.gif align="middle"/>
 <br>
 <p>Jak powszechnie wiadomo, internet składa się w dużej mierze z kotów. Około 15% informacji wyszukiwanych w internecie jest powiązana z kotami.</p>
 <p>Na poszczególnych podstronach przedstawione są popularne koty z internetu.</p>
@@ -55,10 +55,10 @@ Koci opór jest wprost proporcjonalny do ludzkiej chęci zmuszenia kota do czego
 </div>
 <br>
 <h3> Kot według Leonarda da Vinci </h3>
-<img src=zdj/Kotd.gif />
+<img src=galeria/Kotd.gif />
 <div id="zrodlo">
 Źródło: <a href=http://nonsensopedia.wikia.com/wiki/Kot>http://nonsensopedia.wikia.com/wiki/Kot</a>
-<img src=zdj/dol.gif align="left"/>
+<img src=galeria/dol.gif align="left"/>
 
 </div>
 
