--- a/s1.html
+++ b/s1.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="section">
-<img src=zdj/grumpy.jpg align="middle" vspace="25"/>
+<img src=galeria/grumpy.jpg align="middle" vspace="25"/>
 <br>
 <p>Grumpy Cat, właściwe imię: Tardar Sauce[po polsku:sos tatarski](ur. 4 kwietnia 2012) – amerykańska kotka, która stała się „osobowością” internetową i której wizerunek wykorzystano w memach internetowych. </p>
 
@@ -37,7 +37,7 @@
 <p>Według Bundesenów kotka zachowuje się normalnie przez „99% jej życia”. Kotka jest fotografowana w celach reklamowych i publicystycznych raz w tygodniu. Jej opiekunka nie dopuszcza do niej obcych ludzi w innych celach.</p>
 <br>
 
-<img src=zdj/meme.jpeg align="middle"/>
+<img src=galeria/meme.jpeg align="middle"/>
 <br>
 <br>
 
