--- a/s2.html
+++ b/s2.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="section">
-<img src=zdj/pusheen.png align="middle" vspace="25"/>
+<img src=galeria/pusheen.png align="middle" vspace="25"/>
 <br>
 <p>Pusheen is an animated webcomic series that depicts the life and dreams of the titular gray tabby cat. </p>
 
@@ -37,7 +37,7 @@
 
 <br>
 
-<img src=zdj/pusheen2.jpg align="middle"/>
+<img src=galeria/pusheen2.jpg align="middle"/>
 
 <br>
 <br>
