--- a/s4.html
+++ b/s4.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="section">
-<img src=zdj/lilbub.jpg align="middle" vspace="25"/>
+<img src=galeria/lilbub.jpg align="middle" vspace="25"/>
 <br>
 <p> Kotka Lil Bub jest karlicą - ma krótkie łapki z sześcioma palcami, zadarty nos, wystający język i wielkie oczy. Jej właściciel przygarnął ją z schroniska w 2011 roku, a następnie zaczął wrzucać filmiki z jej udziałem do sieci.  </p>
 
@@ -36,7 +36,7 @@
 
 <br>
 
-<img src=zdj/lil.jpg align="middle" width="500" height="330"/>
+<img src=galeria/lil.jpg align="middle" width="500" height="330"/>
 
 <br>
 <br>
