--- a/s5.html
+++ b/s5.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="section">
-<img src=zdj/hamilton.png align="middle" vspace="25" width="300" height="220"/>
+<img src=galeria/hamilton.png align="middle" vspace="25" width="300" height="220"/>
 <br>
 <p>  Hamilton was born with fantastic facial hair.
 
@@ -42,7 +42,7 @@ But his facial hair isn't the only thing that makes him special - he's also a re
 
 <br>
 
-<img src=zdj/hamilton2.png align="middle" width="300" height="250"/>
+<img src=galeria/hamilton2.png align="middle" width="300" height="250"/>
 
 <br>
 <br>
