--- a/s6.html
+++ b/s6.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="section">
-<img src=zdj/gif.gif align="middle" vspace="25"/>
+<img src=galeria/gif.gif align="middle" vspace="25"/>
 <br>
 <p> W poniższej tabeli przedstawione jest zestawienie like'ów, subskrybcji, itp na różnych portalach społecznościowych.  </p>
 
