--- a/s3.html
+++ b/s3.html
@@ -25,7 +25,7 @@
 </div>
 
 <div id="section">
-<img src=zdj/nyan.gif align="middle" vspace="5"/>
+<img src=galeria/nyan.gif align="middle" vspace="5"/>
 <br>
 
 <p> Nyan Cat, Pop Tart Cat[1] – film z YouTube powstały w 2011 roku, który stał się internetowym memem. The video merged a Japanese pop song with an animated cartoon cat jest to film przedstawiający kota lecącego w przestrzeni kosmicznej, który zamiast tułowia ma wiśniowy wypiek marki Pop-Tarts. Zwierzę pozostawia za sobą tęczowy ślad. </p>
