Małe zmiany w podstonach

--- a/s2.html
+++ b/s2.html
@@ -27,12 +27,12 @@
 <div id="section">
 <img src=galeria/pusheen.png align="middle" vspace="25"/>
 <br>
-<p>Pusheen is an animated webcomic series that depicts the life and dreams of the titular gray tabby cat. </p>
+<p>Pusheen jest serią internetowych komiksów, które ukazują życie i marzenia  Pusheen'a - grubego, szarego kota. </p>
 
-<p>Pusheen was created by artists Claire Belton and Andrew Duff as a character in their webcomic “Everyday Cute”[3], which was launched in May 2010. Only a few of the older comics were archived[6], however mentions of additional posts can be found on the site’s Facebook page[4] and Twitter account.[</p>
+<p>Pusheen został stworzony przez Claire Belton and Andrew Duff jako bohater ich internetowego komiksu “Everyday Cute”, który powstał w maju 2010. Tylko niektóre ze starszych komików zostały zachowane, jednak wzmianki o niektórych można znaleźć na Facebooku lub Twitterze</p>
 
 
-<p> The comics revolved around the lives of the characters modeled after Belton, Duff, their yellow dog named Carmen and Pusheen, a chubby gray and tabby cat based on Belton’s childhood cat. Her name stems from the Irish word “puisin” (“kitten” in English), which was given to the cat after she was adopted from a shelter. We just said she, but don't forget it's a boy! </p>
+<p> Komiks opowiada o życiu bohaterów stworzonych na wzór twórców, ich psa o imieniu Carmen i Pusheena, kota kreowanego na wzór kota z dzieciństwa Beltona.  </p>
 
 
 <br>
