--- a/s3.html
+++ b/s3.html
@@ -31,10 +31,8 @@
 <p> Nyan Cat, Pop Tart Cat[1] – film z YouTube powstały w 2011 roku, który stał się internetowym memem. The video merged a Japanese pop song with an animated cartoon cat jest to film przedstawiający kota lecącego w przestrzeni kosmicznej, który zamiast tułowia ma wiśniowy wypiek marki Pop-Tarts. Zwierzę pozostawia za sobą tęczowy ślad. </p>
 
 
-<p>The original version of the song "Nyanyanyanyanyanyanya!" was uploaded by user "daniwell"[6] to the Japanese video site Niconico on July 25, 2010.[7] The song features the Vocaloid Hatsune Miku (初音ミク?). The Japanese word "nya" (にゃ?), is onomatopoeic, imitating the call of a cat. The equivalent English language word is "meow".[1]
-
-On January 30, 2011, a user named "Momomomo" ("もももも") uploaded a cover of "Nyanyanyanyanyanyanya!" featuring the UTAU voice Momone Momo (桃音モモ).[8][9] The voice source used to create the Momone Momo voice was Momoko Fujimoto (藤本萌々子?), a Japanese woman who lives in Tokyo.[10]</p>
-<p>YouTube user "saraj00n" (whose real name is Sara)[11] combined the cat animation with the "Momo Momo" version of the song "Nyanyanyanyanyanyanya!", and uploaded it to YouTube on April 5, 2011, three days after Torres had uploaded his animation, giving it the title "Nyan Cat".[1][3] The video rapidly became a success after being featured on websites including G4 and CollegeHumor. Christopher Torres said: "Originally, its name was Pop Tart Cat, and I will continue to call it so, but the Internet has reached a decision to name it Nyan Cat, and I’m happy with that choice, too."[3]</p>
+<p>Oryginalna wersja piosenki "Nyanyanyanyanyanyanya!" została udostępniona przez użytkownika "daniwell" na japońską stronę z filmami Niconico 25 czerwca 2010. Japońskie słowo "nya" jest onomatopeją, imitującą dźwięk wydawany przez kota.</p>
+<p>Użytkownik YouTube'a "saraj00n" połączył animację kota z piosenką i udostępnił na YouTube on 5 kwietnia 2011.</p>
 
 <br>
 
