--- a/s5.html
+++ b/s5.html
@@ -27,15 +27,12 @@
 <div id="section">
 <img src=galeria/hamilton.png align="middle" vspace="25" width="300" height="220"/>
 <br>
-<p>  Hamilton was born with fantastic facial hair.
+<p>  Hamilton urodził się z charakterystyczną białą sierścią wyglądająca jak wąs i dzięki niej stał się sensacją internetu.
 
-And thanks to his unmissable curly white moustache, he's now an internet sensation.
+Hamilton ma teraz ponad 100,000 polubień na Facebooku, prawie 400,000 obserwujących Instagramie, ponad 10,000 obserwatorów na Twitterze, i nawet dostał rolę w filmiku firmy Friskies.</p>
 
-Hamilton now has over 100,000 Facebook likes, almost 550,000 Instagram followers, over 10,000 Twitter followers, and has even landed a role in a Friskies music video.
-
-But his facial hair isn't the only thing that makes him special - he's also a rescue cat </p>
-
-<p>Hamilton was abandoned in San Fransisco and was just two-years-old when he was put up for adoption and stand-up comedian Jay Stowe fell in love with him at the Human Society Silicon Valley.</p>
+<p>Jego "wąsy" nie są jedyna wyjątkową rzeczą związana z nim.
+Hamilton został porzucony w San Francisco miał 2 lata kiedy trafił do adopcji. Został przygarnięty przez Jay'a Stowe.</p>
 
 
 
