--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 		<h1>Sławne koty w internecie</h1>
 	</div>
  
 	
 
 
-<div id="nav">
-<a href="./index.html">Główna</a><br>
-<a href="./s1.html">Grumpy Cat</a><br>
-<a href="./s2.html">Pusheen</a><br>
-<a href="./s3.html">Nyan Cat</a><br>
-<a href="./s4.html">Lil Bub</a><br>
-<a href="./s5.html">Hamilton</a><br>
-<a href="./s6.html">Statystyki</a><br>
+<div class="menu">
+<ul>
+<li><a href="./index.html">Główna</a></li>
+<li><a href="./s1.html">Grumpy Cat</a></li>
+<li><a href="./s2.html">Pusheen</a></li>
+<li><a href="./s3.html">Nyan Cat</a></li>
+<li><a href="./s4.html">Lil Bub</a></li>
+<li><a href="./s5.html">Hamilton</a></li>
+<li><a href="./s6.html">Statystyki</a></li>
+</ul>
 </div>
 
-<div id="section">
+<div class="section">
 <img src=galeria/koty.gif align="middle"/>
 <br>
 <p>Jak powszechnie wiadomo, internet składa się w dużej mierze z kotów. Około 15% informacji wyszukiwanych w internecie jest powiązana z kotami.</p>
@@ -38,7 +40,7 @@
 <p> 
 
 <h2>Kilka kocich praw fizyki</h2>
-<div id="lista">
+<div class="lista">
 <ul>
   <li>
 Kot będzie się poruszał po linii prostej, chyba że zaistniał dobry powód do zmiany kierunku.</li>
@@ -56,13 +58,13 @@ Koci opór jest wprost proporcjonalny do ludzkiej chęci zmuszenia kota do czego
 <br>
 <h3> Kot według Leonarda da Vinci </h3>
 <img src=galeria/Kotd.gif />
-<div id="zrodlo">
+<div class="zrodlo">
 Źródło: <a href=http://nonsensopedia.wikia.com/wiki/Kot>http://nonsensopedia.wikia.com/wiki/Kot</a>
 <img src=galeria/dol.gif align="left"/>
 
 </div>
 
-	<div id="footer">
+	<div class="footer">
 		&copy; Copyright 2015 Julia Kuczyńska</footer>
  
 	</div>
