--- a/s1.html
+++ b/s1.html
@@ -7,24 +7,26 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 		<h1>Grumpy Cat</h1>
 	</div>
  
 	
 
 
-<div id="nav">
-<a href="./index.html">Główna</a><br>
-<a href="./s1.html">Grumpy Cat</a><br>
-<a href="./s2.html">Pusheen</a><br>
-<a href="./s3.html">Nyan Cat</a><br>
-<a href="./s4.html">Lil Bub</a><br>
-<a href="./s5.html">Hamilton</a><br>
-<a href="./s6.html">Statystyki</a><br>
+<div class="menu">
+<ul>
+<li><a href="./index.html">Główna</a></li>
+<li><a href="./s1.html">Grumpy Cat</a></li>
+<li><a href="./s2.html">Pusheen</a></li>
+<li><a href="./s3.html">Nyan Cat</a></li>
+<li><a href="./s4.html">Lil Bub</a></li>
+<li><a href="./s5.html">Hamilton</a></li>
+<li><a href="./s6.html">Statystyki</a></li>
+</ul>
 </div>
 
-<div id="section">
+<div class="section">
 <img src=galeria/grumpy.jpg align="middle" vspace="25"/>
 <br>
 <p>Grumpy Cat, właściwe imię: Tardar Sauce[po polsku:sos tatarski](ur. 4 kwietnia 2012) – amerykańska kotka, która stała się „osobowością” internetową i której wizerunek wykorzystano w memach internetowych. </p>
@@ -44,7 +46,7 @@
 
 
 
-	<div id="footer">
+	<div class="footer">
 		&copy; Copyright 2015 Julia Kuczyńska</footer>
  
 	</div>
