--- a/s3.html
+++ b/s3.html
@@ -7,24 +7,26 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 		<h1>Nyan Cat</h1>
 	</div>
  
 	
 
 
-<div id="nav">
-<a href="./index.html">Główna</a><br>
-<a href="./s1.html">Grumpy Cat</a><br>
-<a href="./s2.html">Pusheen</a><br>
-<a href="./s3.html">Nyan Cat</a><br>
-<a href="./s4.html">Lil Bub</a><br>
-<a href="./s5.html">Hamilton</a><br>
-<a href="./s6.html">Statystyki</a><br>
+<div class="menu">
+<ul>
+<li><a href="./index.html">Główna</a></li>
+<li><a href="./s1.html">Grumpy Cat</a></li>
+<li><a href="./s2.html">Pusheen</a></li>
+<li><a href="./s3.html">Nyan Cat</a></li>
+<li><a href="./s4.html">Lil Bub</a></li>
+<li><a href="./s5.html">Hamilton</a></li>
+<li><a href="./s6.html">Statystyki</a></li>
+</ul>
 </div>
 
-<div id="section">
+<div class="section">
 <img src=galeria/nyan.gif align="middle" vspace="5"/>
 <br>
 
@@ -45,7 +47,7 @@
 
 
 
-	<div id="footer">
+	<div class="footer">
 		&copy; Copyright 2015 Julia Kuczyńska</footer>
  
 	</div>
