--- a/s5.html
+++ b/s5.html
@@ -7,24 +7,26 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 		<h1>Hamilton - the hipster cat</h1>
 	</div>
  
 	
 
 
-<div id="nav">
-<a href="./index.html">Główna</a><br>
-<a href="./s1.html">Grumpy Cat</a><br>
-<a href="./s2.html">Pusheen</a><br>
-<a href="./s3.html">Nyan Cat</a><br>
-<a href="./s4.html">Lil Bub</a><br>
-<a href="./s5.html">Hamilton</a><br>
-<a href="./s6.html">Statystyki</a><br>
+<div class="menu">
+<ul>
+<li><a href="./index.html">Główna</a></li>
+<li><a href="./s1.html">Grumpy Cat</a></li>
+<li><a href="./s2.html">Pusheen</a></li>
+<li><a href="./s3.html">Nyan Cat</a></li>
+<li><a href="./s4.html">Lil Bub</a></li>
+<li><a href="./s5.html">Hamilton</a></li>
+<li><a href="./s6.html">Statystyki</a></li>
+</ul>
 </div>
 
-<div id="section">
+<div class="section">
 <img src=galeria/hamilton.png align="middle" vspace="25" width="300" height="220"/>
 <br>
 <p>  Hamilton urodził się z charakterystyczną białą sierścią wyglądająca jak wąs i dzięki niej stał się sensacją internetu.
@@ -48,7 +50,7 @@ Hamilton został porzucony w San Francisco miał 2 lata kiedy trafił do adopcji
 
 
 
-	<div id="footer">
+	<div class="footer">
 		&copy; Copyright 2015 Julia Kuczyńska</footer>
  
 	</div>
