--- a/s6.html
+++ b/s6.html
@@ -7,29 +7,31 @@
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<div id="header">
+	<div class="header">
 		<h1>Statystyki</h1>
 	</div>
  
 	
 
 
-<div id="nav">
-<a href="./index.html">Główna</a><br>
-<a href="./s1.html">Grumpy Cat</a><br>
-<a href="./s2.html">Pusheen</a><br>
-<a href="./s3.html">Nyan Cat</a><br>
-<a href="./s4.html">Lil Bub</a><br>
-<a href="./s5.html">Hamilton</a><br>
-<a href="./s6.html">Statystyki</a><br>
+<div class="menu">
+<ul>
+<li><a href="./index.html">Główna</a></li>
+<li><a href="./s1.html">Grumpy Cat</a></li>
+<li><a href="./s2.html">Pusheen</a></li>
+<li><a href="./s3.html">Nyan Cat</a></li>
+<li><a href="./s4.html">Lil Bub</a></li>
+<li><a href="./s5.html">Hamilton</a></li>
+<li><a href="./s6.html">Statystyki</a></li>
+</ul>
 </div>
 
-<div id="section">
+<div class="section">
 <img src=galeria/gif.gif align="middle" vspace="25"/>
 <br>
 <p> W poniższej tabeli przedstawione jest zestawienie like'ów, subskrybcji, itp na różnych portalach społecznościowych.  </p>
 
-<table id="tabela">
+<table class="tabela">
   <thead>
     <tr>
       <th scope="col">Kot</th>
@@ -87,7 +89,7 @@
 
 
 
-	<div id="footer">
+	<div class="footer">
 		&copy; Copyright 2015 Julia Kuczyńska</footer>
  
 	</div>
